--- a/views/gerarRelatoriosOp.hbs
+++ b/views/gerarRelatoriosOp.hbs
@@ -69,6 +69,14 @@
                         <a href="/visualizarContratos" class="btn btn-light">Acessar</a>
                     </div>
                 </div>
+                <div class="card card-custom">
+                    <div class="card-body d-flex flex-column align-items-center justify-content-center">
+                        <i class="bi bi-wallet2 card-icon"></i>
+                        <h5 class="card-title">Pagamentos Pendentes</h5>
+                        <p class="card-text text-white text-center">Verificar clientes com pagamentos pendentes.</p>
+                        <a href="/visualizarClientesPendentes" class="btn btn-light">Acessar</a>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
