--- a/views/visualizarContratos.hbs
+++ b/views/visualizarContratos.hbs
@@ -79,7 +79,7 @@
                         contractRow.innerHTML = `
         <span>Código: ${Contrato.id}</span>
         <span>Cliente: ${Contrato.nomeCliente || "Não encontrado"}</span>
-        <span>Valor: ${Contrato.valor || "Indefinido"}</span>
+        <span>Valor: R$${Contrato.valor || "Indefinido"}</span>
         <a href="/auth/download/${Contrato.idDocumento}" class="btn btn-primary">Baixar Contrato</a>
         <a href="https://docs.google.com/document/d/${Contrato.idDocumento}/edit" target="_blank" class="btn btn-secondary">Editar no Google Docs</a>
     `;
