--- a/views/cadastroClienteForm.hbs
+++ b/views/cadastroClienteForm.hbs
@@ -14,7 +14,9 @@
 <body class="d-flex flex-column min-vh-100">
     <nav class="navbar navbar-expand-lg">
         <div class="container-fluid">
+            <a href="telaInicial">
             <img src="/Logoextendido.png" width="150" height="40" alt="Logo">
+            </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
