--- a/views/editarDados.hbs
+++ b/views/editarDados.hbs
@@ -14,14 +14,16 @@
 <body class="d-flex flex-column min-vh-100">
     <nav class="navbar navbar-expand-lg" style="background-color: rgb(49, 04, 59);">
         <div class="container-fluid">
+            <a href="telaInicial">
             <img src="/Logoextendido.png" width="150" height="40" alt="Logo">
+            </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
-                    <div class="dropdown">
+                    <div class="dropdown mt-3">
                         <button id="toggleTheme" class="btn btn-light btn-dark-mode">
                             <i class="bi bi-moon-fill"></i>
                         </button>
@@ -30,10 +32,9 @@
                             Menu
                         </button>
                         <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="cadastro">Cadastrar Usuário</a></li>
                             <li><a class="dropdown-item" href="gerarRelatorios">Gerar Relatórios</a></li>
                             <li><a class="dropdown-item" href="cadastrarCliente">Gerar Contratos</a></li>
-                            <li><a class="dropdown-item" href="editarDados">Editar Dados</a></li>
+                            <li><a class="dropdown-item" href="atualizarOperador">Editar Dados</a></li>
                             <li><a class="dropdown-item" href="produtos">Produtos</a></li>
                             <li><a class="dropdown-item" href="sair">Sair</a></li>
                         </ul>
