--- a/views/paginaContratoOperador.hbs
+++ b/views/paginaContratoOperador.hbs
@@ -14,14 +14,16 @@
 <body class="d-flex flex-column min-vh-100">
     <nav class="navbar navbar-expand-lg">
         <div class="container-fluid">
-            <img src="Images/Logoextendido.png" width="150" height="40" alt="Logo">
+            <a href="telaInicial">
+            <img src="/Logoextendido.png" width="150" height="40" alt="Logo">
+            </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
-                    <div class="dropdown">
+                    <div class="dropdown mt-3">
                         <button id="toggleTheme" class="btn btn-light btn-dark-mode">
                             <i class="bi bi-moon-fill"></i>
                         </button>
