--- a/views/vizualizarProdutos.hbs
+++ b/views/vizualizarProdutos.hbs
@@ -8,19 +8,31 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
     <link rel="stylesheet" href="/css/styles.css">
+    <style>
+        body {
+            display: flex;
+            flex-direction: column;
+        }
+
+        .content-spacing {
+            flex: 1;
+        }
+    </style>
 </head>
 
 <body>
     <nav class="navbar navbar-expand-lg">
         <div class="container-fluid">
-            <img src="Images/Logoextendido.png" width="150" height="40" alt="Logo">
+            <a href="telaInicial">
+            <img src="/Logoextendido.png" width="150" height="40" alt="Logo">
+            </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
-                    <div class="dropdown">
+                    <div class="dropdown mt-3">
                         <button id="toggleTheme" class="btn btn-light btn-dark-mode">
                             <i class="bi bi-moon-fill"></i>
                         </button>
@@ -29,12 +41,11 @@
                             Menu
                         </button>
                         <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="vizualizarProdutos">Visualizar Produtos</a></li>
-                            <li><a class="dropdown-item" href="formCadastrarProdutos">Cadastrar Produto</a></li>
-                            <li><a class="dropdown-item" href="formEditarProdutos">Editar Produto</a></li>
-                            <li><a class="dropdown-item" href="formDeletarProdutos">Deletar Produto</a></li>
-                            <li><a class="dropdown-item" href="telaInicial">Tela Inicial</a></li>
-                            <li><a class="dropdown-item" href="/">Sair</a></li>
+                            <li><a class="dropdown-item" href="gerarRelatorios">Gerar Relatórios</a></li>
+                            <li><a class="dropdown-item" href="cadastrarCliente">Gerar Contratos</a></li>
+                            <li><a class="dropdown-item" href="editarDados">Editar Dados</a></li>
+                            <li><a class="dropdown-item" href="produtos">Produtos</a></li>
+                            <li><a class="dropdown-item" href="sair">Sair</a></li>
                         </ul>
                     </div>
                 </ul>
@@ -42,12 +53,12 @@
         </div>
     </nav>
 
-    <div class="container content-spacing flex-grow-1">
+    <div class="container content-spacing">
         <h1 class="text-center mb-4" style="color: var(--text-color);">Produtos</h1>
         <div class="row" id="productCards"></div>
     </div>
 
-    <footer class="footer text-light text-center py-3">
+    <footer class="text-light text-center py-3 mt-auto">
         Todos os direitos reservados
     </footer>
 
