Adição do botão de Calendário

--- a/views/cadastroClienteForm.hbs
+++ b/views/cadastroClienteForm.hbs
@@ -23,7 +23,10 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
-                    <div class="dropdown">
+                    <div class="dropdown mt-3">
+                        <a href="/calendario" class="btn btn-light btn-dark-mode" role="button">
+                            <i class="bi bi-calendar4-event"></i>
+                        </a>
                         <button id="toggleTheme" class="btn btn-light btn-dark-mode">
                             <i class="bi bi-moon-fill"></i>
                         </button>
