--- a/views/telaInicialGerente.hbs
+++ b/views/telaInicialGerente.hbs
@@ -24,6 +24,9 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <div class="dropdown mt-3">
+                        <a href="/calendario" class="btn btn-light btn-dark-mode" role="button">
+                            <i class="bi bi-calendar4-event"></i>
+                        </a>
                         <button class="btn btn-light btn-dark-mode" id="toggleTheme">
                             <i class="bi bi-moon-fill"></i>
                         </button>
@@ -87,8 +90,8 @@
                 <div class="card-body d-flex flex-column align-items-center justify-content-between">
                     <i class="bi bi-pencil-square card-icon mb-3" style="font-size: 2rem;"></i>
                     <h5 class="card-title">Editar Dados</h5>
-                    <p class="card-text text-white">Atualizar informações pessoais.</p>
-                    <a href="atualizarOperador" class="btn btn-light mt-auto w-100">Acessar</a>
+                    <p class="card-text text-white">Atualizar informações pessoais e de funcionários.</p>
+                    <a href="editarDados" class="btn btn-light mt-auto w-100">Acessar</a>
                 </div>
             </div>
         </div>
