--- a/views/gerarRelatoriosOp.hbs
+++ b/views/gerarRelatoriosOp.hbs
@@ -25,6 +25,9 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <div class="dropdown mt-3">
+                        <a href="/calendario" class="btn btn-light btn-dark-mode" role="button">
+                            <i class="bi bi-calendar4-event"></i>
+                        </a>
                         <button id="toggleTheme" class="btn btn-light btn-dark-mode">
                             <i class="bi bi-moon-fill"></i>
                         </button>
@@ -80,11 +83,13 @@
                         <a href="/visualizarContratos" class="btn btn-light">Acessar</a>
                     </div>
                 </div>
-                <div class="card card-custom">
+            </div>
+            <div class="col-12 col-md-3 d-flex justify-content-center mb-4">
+                <div class="card card-custom text-center p-3 w-100">
                     <div class="card-body d-flex flex-column align-items-center justify-content-center">
                         <i class="bi bi-wallet2 card-icon"></i>
                         <h5 class="card-title">Pagamentos Pendentes</h5>
-                        <p class="card-text text-white text-center">Verificar clientes com pagamentos pendentes.</p>
+                        <p class="card-text">Verificar clientes com pagamentos pendentes.</p>
                         <a href="/visualizarClientesPendentes" class="btn btn-light">Acessar</a>
                     </div>
                 </div>
