--- a/views/telaInicialOp.hbs
+++ b/views/telaInicialOp.hbs
@@ -24,6 +24,9 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <div class="dropdown mt-3">
+                        <a href="/calendario" class="btn btn-light btn-dark-mode mt-3" role="button">
+                            <i class="bi bi-calendar4-event"></i>
+                        </a>
                         <button class="btn btn-light btn-dark-mode  mt-3" id="toggleTheme">
                             <i class="bi bi-moon-fill"></i>
                         </button>
